MAJOR CHANGES: Added CSS files for File Management (Note: Not Yet linked from HTML to CSS). Minor: The overlapping issue between sidebar and the navbar fixed.

--- a/corrective_action_system/static/main/styles.css
+++ b/corrective_action_system/static/main/styles.css
@@ -37,7 +37,7 @@ body, html {
 .btn-primary {
     width: 100%;
     color: #fff;
-    background-color: #007bff; /* Bootstrap primary color */
+    background-color: ##8E2524 ; /* Bootstrap primary color */
     border: none;
 }
 
